--- a/composer.json
+++ b/composer.json
@@ -117,7 +117,7 @@
         "spryker/development-core": "dev-master",
         "spryker/code-sniffer": "dev-master",
         "spryker/git-hook": "dev-master",
-        "spryker/robotframework-suite-tests": "dev-master",
+        "spryker/robotframework-suite-tests": "dev-feature/frw-8899/adjusted-robot-ui-tests",
         "pdepend/pdepend": "dev-master as 2.11.0",
         "phpmd/phpmd": "^2.0.0",
         "composer/package-versions-deprecated": "^1.8.0",
