CC-34501: Initialisation Order Amendment Process (#9129)
CC-34501 Initialisation Order Amendment Process

--- a/tests/PyzTest/Zed/TestifyBackendApi/codeception.dynamic.fixtures.yml
+++ b/tests/PyzTest/Zed/TestifyBackendApi/codeception.dynamic.fixtures.yml
@@ -59,6 +59,11 @@ suites:
                 - \SprykerTest\Zed\Category\Helper\CategoryDataHelper
                 - \SprykerTest\Zed\ProductCategory\Helper\ProductCategoryDataHelper
                 - \SprykerTest\Shared\MerchantCommission\Helper\MerchantCommissionHelper
+                - \SprykerTest\Shared\ProductMeasurementUnit\Helper\ProductMeasurementUnitDataHelper
+                - \SprykerTest\Zed\ProductPackagingUnit\Helper\ProductPackagingUnitTypeHelper
+                - \SprykerTest\Zed\ProductPackagingUnit\Helper\ProductPackagingUnitHelper
+                - \SprykerTest\Shared\ProductOption\Helper\ProductOptionDataHelper
+                - \SprykerTest\Shared\ProductBundle\Helper\ProductBundleHelper
                 - \SprykerTest\Zed\Twig\Helper\TwigHelper:
             config:
                 \SprykerTest\Shared\Testify\Helper\DataCleanupHelper:
