--- a/buddy.yml
+++ b/buddy.yml
@@ -1843,14 +1843,14 @@
 
 - pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI / Group One'
   events:
-    - type: "PULL_REQUEST"
-      events:
-          - "reopened"
-          - "labeled"
-          - "opened"
-          - "synchronize"
-      branches:
-          - "*"
+      - type: 'PULL_REQUEST'
+        events:
+            - 'reopened'
+            - 'labeled'
+            - 'opened'
+            - 'synchronize'
+        branches:
+            - '*'
   trigger_conditions:
       - trigger_condition: 'VAR_CONTAINS'
         trigger_variable_value: 'run-ui-tests'
@@ -1883,7 +1883,7 @@
             - '.ci/snippet/RUN script -q -e -c "time docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local/ -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_oneANDsmoke -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
             - '.ci/snippet/RERUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local/ -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ -d results/rerun --runemptysuite --rerunfailed results/output.xml --output rerun.xml -s \"*\".tests.ui.suite .
-                && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
+              && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
@@ -1918,17 +1918,16 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_LARGE'
 
-
 - pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI / Group Two'
   events:
-      - type: "PULL_REQUEST"
+      - type: 'PULL_REQUEST'
         events:
-            - "reopened"
-            - "labeled"
-            - "opened"
-            - "synchronize"
+            - 'reopened'
+            - 'labeled'
+            - 'opened'
+            - 'synchronize'
         branches:
-            - "*"
+            - '*'
   trigger_conditions:
       - trigger_condition: 'VAR_CONTAINS'
         trigger_variable_value: 'run-ui-tests'
@@ -1961,7 +1960,7 @@
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local/ -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_twoANDsmoke -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
             - '.ci/snippet/RERUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local/ -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ -d results/rerun --runemptysuite --rerunfailed results/output.xml --output rerun.xml -s \"*\".tests.ui.suite .
-                && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
+              && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
@@ -1998,14 +1997,14 @@
 
 - pipeline: 'Docker / Alpine / PHP 8.3 / MariaDB / Robot / UI / Group Three'
   events:
-      - type: "PULL_REQUEST"
+      - type: 'PULL_REQUEST'
         events:
-            - "reopened"
-            - "labeled"
-            - "opened"
-            - "synchronize"
+            - 'reopened'
+            - 'labeled'
+            - 'opened'
+            - 'synchronize'
         branches:
-            - "*"
+            - '*'
   trigger_conditions:
       - trigger_condition: 'VAR_CONTAINS'
         trigger_variable_value: 'run-ui-tests'
@@ -2038,7 +2037,7 @@
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local/ -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_treeANDsmoke -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
             - '.ci/snippet/RERUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local/ -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ -d results/rerun --runemptysuite --rerunfailed results/output.xml --output rerun.xml -s \"*\".tests.ui.suite .
-                && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
+              && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
@@ -2075,14 +2074,14 @@
 
 - pipeline: 'Docker / Alpine / PHP 8.3 / PostgreSQL / Robot / UI / Group One / Dynamic Store Off'
   events:
-      - type: "PULL_REQUEST"
+      - type: 'PULL_REQUEST'
         events:
-            - "reopened"
-            - "labeled"
-            - "opened"
-            - "synchronize"
+            - 'reopened'
+            - 'labeled'
+            - 'opened'
+            - 'synchronize'
         branches:
-            - "*"
+            - '*'
   trigger_conditions:
       - trigger_condition: 'VAR_CONTAINS'
         trigger_variable_value: 'run-ui-tests'
@@ -2115,7 +2114,7 @@
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v db_engine:psycopg2 -v docker:True -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_oneANDsmoke -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
             - '.ci/snippet/RERUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v db_engine:psycopg2 -v docker:True -d results/rerun --runemptysuite --rerunfailed results/output.xml --output rerun.xml -s \"*\".tests.ui.suite .
-                && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
+              && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
@@ -2146,14 +2145,14 @@
 
 - pipeline: 'Docker / Alpine / PHP 8.3 / PostgreSQL / Robot / UI / Group Two / Dynamic Store Off'
   events:
-      - type: "PULL_REQUEST"
+      - type: 'PULL_REQUEST'
         events:
-            - "reopened"
-            - "labeled"
-            - "opened"
-            - "synchronize"
+            - 'reopened'
+            - 'labeled'
+            - 'opened'
+            - 'synchronize'
         branches:
-            - "*"
+            - '*'
   trigger_conditions:
       - trigger_condition: 'VAR_CONTAINS'
         trigger_variable_value: 'run-ui-tests'
@@ -2186,7 +2185,7 @@
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v db_engine:psycopg2 -v docker:True -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_twoANDsmoke -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
             - '.ci/snippet/RERUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v db_engine:psycopg2 -v docker:True -d results/rerun --runemptysuite --rerunfailed results/output.xml --output rerun.xml -s \"*\".tests.ui.suite .
-                && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
+              && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
@@ -2217,14 +2216,14 @@
 
 - pipeline: 'Docker / Alpine / PHP 8.3 / PostgreSQL / Robot / UI / Group Three / Dynamic Store Off'
   events:
-      - type: "PULL_REQUEST"
+      - type: 'PULL_REQUEST'
         events:
-            - "reopened"
-            - "labeled"
-            - "opened"
-            - "synchronize"
+            - 'reopened'
+            - 'labeled'
+            - 'opened'
+            - 'synchronize'
         branches:
-            - "*"
+            - '*'
   trigger_conditions:
       - trigger_condition: 'VAR_CONTAINS'
         trigger_variable_value: 'run-ui-tests'
@@ -2257,7 +2256,7 @@
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v db_engine:psycopg2 -v docker:True -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_treeANDsmoke -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
             - '.ci/snippet/RERUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v db_engine:psycopg2 -v docker:True -d results/rerun --runemptysuite --rerunfailed results/output.xml --output rerun.xml -s \"*\".tests.ui.suite .
-                && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
+              && docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
